tests/parsing/smtlib/poly/errors/165_function_def_unclosed_1.psmt2
(set-logic ALL)
(define-fun-rec foo (par (a) () bool false _))
